fixed more ig spacing issues

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -65,6 +65,10 @@ body
 .show > a > img:hover
   opacity: 0.6
 
+.show
+  width: 100%
+  margin: 0
+
 .navbar-default
   background-color: rgb(255,255,255)
   border: none
